test/corpus/definitions/spec.txt
===
spec definition
===

spec some_spec {

}

---

(source_file
    (spec_definition
        (identifier)))

===
External function definition
===

spec some_spec {
    external fn sorting_function (Address, Address) -> Address;
}

---
    (source_file
      (spec_definition
        (identifier)
        (external_function_definition
          (identifier)
          (argument_list
            (identifier)
            (identifier))
          (identifier))))

===
Type definition
===

spec some_spec {
 type sf = sorting_function;
}

---
    (source_file
      (spec_definition
        (identifier)
        (type_definition_statement
          (identifier)
          (identifier))))
