test/corpus/directive/use.txt
===
Use directive
===

use inference::std;

---

(source_file
    (use_directive
        (identifier)
        (expand_operator)
        (identifier)))

===
Use directive nested
===

use inference::std::algorithms::sort;

---

(source_file
    (use_directive
        (identifier)
        (expand_operator)
        (identifier)
        (expand_operator)
        (identifier)
        (expand_operator)
        (identifier)))

===
Use directive from
===

use { sort } from "./sort.rs";

---

(source_file
    (use_directive
        (identifier)
        (string_literal)))

===
User several imports
===

use { sort, hash } from "./sort.rs";

---

(source_file
    (use_directive
        (identifier)
        (identifier)
        (string_literal)))

===
Use several types from one import
===

use inference::std::algorithms::{sort,hash};

---

    (source_file
      (use_directive
        (identifier)
        (expand_operator)
        (identifier)
        (expand_operator)
        (identifier)
        (expand_operator)
        (identifier)
        (identifier)))
