test/corpus/spec/constants.txt
===
12.2 Examples
===
spec Constants {
    const a: i32 = 10;
    const b: bool = true;
    const c: u32 = 0;

    fn define_local_constants() {
        const d: i32 = 10;
        const e: bool = true;
        const f: u32 = 0;
    }
}
---
    (source_file
      (spec_definition
        (identifier)
        (constant_definition
          (identifier)
          (type_i32)
          (number_literal))
        (constant_definition
          (identifier)
          (type_bool)
          (bool_literal))
        (constant_definition
          (identifier)
          (type_u32)
          (number_literal))
        (function_definition
          (identifier)
          (argument_list)
          (block
            (constant_definition
              (identifier)
              (type_i32)
              (number_literal))
            (constant_definition
              (identifier)
              (type_bool)
              (bool_literal))
            (constant_definition
              (identifier)
              (type_u32)
              (number_literal))))))
