test/corpus/statement/assert.txt
===
Function with assert statement
===
fn valid_Address(a: Address) -> Address {
    assert (a < 0);
    return a;
}

---
    (source_file
      (function_definition
        (identifier)
        (argument_list
          (argument_declaration
            (identifier)
            (identifier)))
        (identifier)
        (block
          (assert_statement
            (parenthesized_expression
              (binary_expression
                (identifier)
                (number_literal))))
          (return_statement
            (identifier)))))

===
Assert statement
===

fn proof() -> () {
    assert a < 0;
}

---
    (source_file
      (function_definition
        (identifier)
        (argument_list)
        (type_unit)
        (block
          (assert_statement
            (binary_expression
              (identifier)
              (number_literal))))))
