test/corpus/statement/if_else.txt
===
Base if-else statement
===

fn main() {
    let number : i32 = 3;

    if number < 5 {
        print("condition was true");
    } else {
        print("condition was false");
    }
}

---
    (source_file
      (function_definition
        (function_keyword)
        (identifier)
        (argument_list)
        (block
          (variable_definition_statement
            (identifier)
            (type)
            (assign_operator)
            (number_literal))
          (if_statement
            (binary_expression
              (identifier)
              (less_operator)
              (number_literal))
            (block
              (expression_statement
                (function_call_expression
                  (identifier)
                  (string_literal))))
            (block
              (expression_statement
                (function_call_expression
                  (identifier)
                  (string_literal))))))))

===
Is-else statement without else branch
===

fn main() {
    let number : i32 = 3;

    if number < 5 {
        print("condition was true");
    }
}

---
    (source_file
      (function_definition
        (function_keyword)
        (identifier)
        (argument_list)
        (block
          (variable_definition_statement
            (identifier)
            (type)
            (assign_operator)
            (number_literal))
          (if_statement
            (binary_expression
              (identifier)
              (less_operator)
              (number_literal))
            (block
              (expression_statement
                (function_call_expression
                  (identifier)
                  (string_literal))))))))
